--- a/code/package.json
+++ b/code/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tore-ddos",
+  "name": "barrasida",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "ddos-stress": "^0.1.0",
+    "figlet": "^1.5.0",
+    "form-data": "^3.0.0",
     "readline": "^1.3.0"
   }
 }
